# dataset-cleaner

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
src/dataset_cleaner/: caption.py  cleaning.py  cli.py  config.py  reporting.py
